--- a/css/estilo.css
+++ b/css/estilo.css
@@ -7,31 +7,34 @@
   .inicial {
     text-align: center;
     font-size: 100px;
-    background-color: lightgrey;
+    background-color: rgb(255, 76, 186);
     width: 150px;
     height: 200px;
-    border: 15px solid green;
+    border: 15px solid rgb(119, 0, 255);
     padding: 10px;
     margin: 20px;
   }
   .acertou {
     text-align: center;
-    color: yellow;
-    background-color: LawnGreen;
+    color: rgb(0, 255, 242);
+    background-color: rgb(0, 244, 252);
     width: 150px;
     height: 200px;
-    border: 15px solid yellow;
+    border: 15px solid rgb(255, 0, 242);
     padding: 10px;
     margin: 20px;
   }
   .errou {
     text-align: center;
     font-size: 100px;
-    color: white;
-    background-color: red;
+    color: rgb(255, 0, 179);
+    background-color: rgb(255, 84, 84);
     width: 150px;
     height: 200px;
-    border: 15px solid black;
+    border: 15px solid rgb(255, 0, 242);
     padding: 10px;
     margin: 20px;
   }
+  body {
+  background-color: #fa85b4; 
+}
